--- a/front.html
+++ b/front.html
@@ -3,7 +3,7 @@
     <table class="table table-striped table-condensed table-bordered">
         <tr>
             <td>
-                {% if tm_configured %}<a href="{% url 'machine_list_id' 'TimeMachine' 'configured' page theid %}">{% endif %}
+                {% if tm_configured %}<a href="{% url 'machine_list_front' 'TimeMachine' 'configured' %}">{% endif %}
                 TimeMachine configured
                 <span class="badge badge-info pull-right">
                     {{ tm_configured }}
@@ -13,7 +13,7 @@
         </tr>
         <tr>
             <td>
-                {% if tm_notconfigured %}<a href="{% url 'machine_list_id' 'TimeMachine' 'notconfigured' page theid %}">{% endif %}
+                {% if tm_notconfigured %}<a href="{% url 'machine_list_front' 'TimeMachine' 'notconfigured' %}">{% endif %}
                 TimeMachine not configured
                 <span class="badge badge-warning pull-right">
                     {{ tm_notconfigured }}
@@ -24,7 +24,7 @@
 
         <tr>
             <td>
-                {% if tm_recent_ok %}<a href="{% url 'machine_list_id' 'TimeMachine' 'recent_ok' page theid %}">{% endif %}
+                {% if tm_recent_ok %}<a href="{% url 'machine_list_front' 'TimeMachine' 'recent_ok' %}">{% endif %}
                 Backed up < 7 days ago
                 <span class="badge badge-success pull-right">
                     {{ tm_recent_ok }}
@@ -34,7 +34,7 @@
         </tr>
         <tr>
             <td>
-                {% if tm_recent_warning %}<a href="{% url 'machine_list_id' 'TimeMachine' 'recent_warning' page theid %}">{% endif %}
+                {% if tm_recent_warning %}<a href="{% url 'machine_list_front' 'TimeMachine' 'recent_warning' %}">{% endif %}
                 Backed up between 7 and 28 days ago
                 <span class="badge badge-warning pull-right">
                     {{ tm_recent_warning }}
@@ -44,7 +44,7 @@
         </tr>
         <tr>
             <td>
-                {% if tm_recent_error %}<a href="{% url 'machine_list_id' 'TimeMachine' 'recent_error' page theid %}">{% endif %}
+                {% if tm_recent_error %}<a href="{% url 'machine_list_front' 'TimeMachine' 'recent_error' %}">{% endif %}
                 Backed up > 28 days ago
                 <span class="badge badge-important pull-right">
                     {{ tm_recent_error }}
